# StratAGI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start.sh
app/: crew.py  main.py
app/agents/: __init__.py  financial_analyst.py  market_researcher.py  strategist.py
app/tasks/: __init__.py  financial_tasks.py  market_tasks.py  report_tasks.py
app/tools/: __init__.py  browser_tools.py  financial_tools.py
frontend/: app.py
