[project]
name = "stratagi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crewai[tools]==0.102.0",
    "fastapi>=0.116.1",
    "langchain>=0.1.20",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "streamlit>=1.47.1",
    "tavily-python>=0.7.10",
    "uvicorn[standard]>=0.35.0",
]
